fix social link spacing

--- a/css/index.css
+++ b/css/index.css
@@ -155,7 +155,7 @@ small {
 }
 
 .social-links>a>img {
-    height: 3.3rem;
+    height: 3rem;
     margin: 0.5rem;
 }
 
